--- a/Help/index.html
+++ b/Help/index.html
@@ -12,37 +12,31 @@
 </center>
 
 <h3>Before Using Snail Mail</h3>
-Before using Snail Mail, you should have some addresses entered into your Mac OS X Address Book (application distributed with Mac OS X), otherwise you will only be able to manually enter addresses each time you want to print an envelope.  Preferably, you should have one of the entries in the Address Book marked as "My Card" (choose "Show My Card" from Address Book's "Card" menu to see if it's set, or choose "This is My Card" from Address Book's "Card" menu to set it for the selected entry).  Snail Mail, by default, uses your card in the Address Book for the return address.
+Before using Snail Mail, you should have some addresses entered into your Mac OS X Contacts (application distributed with Mac OS X), otherwise you will only be able to manually enter addresses each time you want to print an envelope.  Preferably, you should have one of the entries in Contacts marked as "My Card" (choose "Go to My Card" from Contacts's "Card" menu to see if it's set, or choose "Make This My Card" from Contacts's "Card" menu to set it for the selected entry).  Snail Mail, by default, uses your card in Contacts for the return address.
 
 <h3>Selecting a Return Address</h3>
 
-The return address is automatically set to the first address of the "My Card" record in the Mac OS X Address Book, by default.
+The return address is automatically set to the first address of the "My Card" record in the Mac OS X Contacts, by default.
 <p>
-If you have more than one address entered in the Address Book's "My Card" record, you can choose your return address from the address selection popup menu (next to the "Return Address:" popup menu), which automatically contains all of your "My Card" addresses.  This selection will be remembered next time you use Snail Mail.
+If you have more than one address entered in Contacts's "My Card" record, you can choose your return address from the address selection popup menu (next to the "Return Address:" popup menu), which automatically contains all of your "My Card" addresses.  This selection will be remembered next time you use Snail Mail.
 <P>
-It is also possible to enter a return address manually (see "Manual Return Address" below) or to have no return address printed (see "No Return Address" below).  To change back to having your address book automatically kept up to date with the Address Book, choose "Address Book" from the "Return Address" popup menu.
+It is also possible to enter a return address manually (see "Manual Return Address" below) or to have no return address printed (see "No Return Address" below).  To change back to having your Contacts automatically kept up to date with Contacts, choose "Contacts" from the "Return Address" popup menu.
 
-<h3>Selecting a Delivery Address (ie, Addressing the Envelope)</h3>
+<h3>Selecting a Delivery Address (ie Addressing the Envelope)</h3>
 
-Select a delivery address (to whom the envelope is to be sent) by clicking on an address in the list of addresses (which contains all of the addresses from your Address Book)
+Select a delivery address (to whom the envelope is to be sent) by clicking on an address in the list of addresses (which contains all of the addresses from your Contacts)
 <BR>OR
 <BR>Type part of the name of the delivery address you want in the "Search" field, and the list of names and addresses automatically updates to show those which match the search text you type.
 
 <h3>Printing Single Envelopes</h3>
 
-To print immediately (no dialogue) just click the "Print" button in the toolbar!  Snail Mail will attempt to print 1 copy of the envelope to the printer that was last used in Snail Mail (using the same print settings last used in Snail Mail).
+To print immediately (no dialogue) just click the "Print" button in the toolbar.  Snail Mail will attempt to print 1 copy of the envelope to the printer that was last used in Snail Mail (using the same print settings last used in Snail Mail).
 <BR>OR
-<BR>Press COMMAND-"P" for a standard print dialogue to choose another printer, enter number of copies, or change other print settings.
-
-<h3>Printing Envelopes from the Address Book Application
-<BR>(Using the Address Book Snail Mail Plug-In)</h3>
-If the Snail Mail plug-in is installed, you can print envelopes from the Mac OS X Address Book application.  Just click on the label pop-up menu next to an address in the Address Book application, and choose the "Print Snail Mail Envelope" command (the menu is usually labelled, "home" or "work", etc).  This will automatically launch Snail Mail, address the envelope to the address you chose, and choose Snail Mail's print command.
-<h4>To Install the Plug-In</h4>
-Launch Snail Mail, and choose "Install Address Book Plug-In" from the "File" menu.
+<BR>Press command-P for a standard print dialogue to choose another printer, enter number of copies, or change other print settings.
 
 <h3>Refining the List of Displayed Addresses</h3>
 
-Click on a group from the Groups list to display only the addresses from that group as defined in the Address Book (to add, delete or modify groups, use the Address Book application).
+Click on a group from the Groups list to display only the addresses from that group as defined in Contacts (to add, delete or modify groups, use Contacts application).
 <p>
 Enter text in the "Search" field to have the list of addresses automatically updated to show those who's names match the search text you type.
 
@@ -54,7 +48,7 @@ Depending on settings in preferences this will either print envelopes for all of
 
 <h3>Manual Return Address</h3>
 
-If you want to use a return address that is not automatically included from the address book, you can override the automatic entry of the Return Address by selecting "Manual" from the "Return Address:" popup menu.  When this option is selected, the text of the Return Address on the envelopes will no longer be updated automatically from information in the Address Book database.  Now click in the return address area in the envelope window, and enter the text (and/or images) for return address you want.
+If you want to use a return address that is not automatically included from Contacts, you can override the automatic entry of the Return Address by selecting "Manual" from the "Return Address:" popup menu.  When this option is selected, the text of the Return Address on the envelopes will no longer be updated automatically from information in Contacts database.  Now click in the return address area in the envelope window, and enter the text (and/or images) for return address you want.
 <P>
 Turning on this setting also allows saving of images in the return address or no return address at all - see below.
 
@@ -76,7 +70,7 @@ Graphics can also be added to this background area by copy/paste or drag/drop.
 <p>
 NB:  Because this background area overlaps with the return address and recipient address areas, be careful not to add text or graphics that will interfere with the text in these areas.  It may be necessary to press RETURN or TAB (or both) a few times to avoid typing visible text directly behind the return address, for example.
 <p>
-Tip:  Using images in the envelope background allows company logos to be placed behind the return address area and be used in conjuction with an automatically placed address from the address book.  Because the left margin of the return address and the left margin of the background area are usually the same an extra step is necessary if you wish to have a graphic placed to the left of the return address (as is often the case for a company logo, for example).  To do this, open the "Text Attributes" window using the toolbar button, or the command in the "Format" menu, then select all the text in the Return Address Fields area, and choose "Show Ruler" from the "Format" menu.  Using this ruler, drag the left line starting markers to the right enough to make room for the desired graphic, then click "Okay".
+Tip:  Using images in the envelope background allows company logos to be placed behind the return address area and be used in conjuction with an automatically placed address from Contacts.  Because the left margin of the return address and the left margin of the background area are usually the same an extra step is necessary if you wish to have a graphic placed to the left of the return address (as is often the case for a company logo, for example).  To do this, open the "Text Attributes" window using the toolbar button, or the command in the "Format" menu, then select all the text in the Return Address Fields area, and choose "Show Ruler" from the "Format" menu.  Using this ruler, drag the left line starting markers to the right enough to make room for the desired graphic, then click "Okay".
 
 <h3>Envelope Profiles and Page Setup</h3>
 An envelope profile is simply a set of standard "Page Setup" settings and Snail Mail "Margins" settings.  Snail Mail is initially configured with one default envelope profile (#10 envelope with appropriate margins) called "Default".
@@ -101,20 +95,14 @@ To set the default text attributes, click the "Text Attributes" button in the to
 
 <h3>Inter-Application Features</h3>
 
-<h4>Address Book Plug-In</h4>
-Snail Mail gets it's address list directly from the Address Book database, however some people may prefer to be able to print envelopes directly from the Address Book application itself.
-Snail Mail makes this possible with it's Address Book plug-in.  You can install the plug-in using the "Install Plug-In" command in the "File" menu (and remove it using the "Remove Plug-In" command).  After installing, the Address Book program will need to be re-launched (if already running) in order to utilise the Snail Mail plug-in.
-<p>
-Once installed, the plug-in can be used by clicking on the roll-over menu (ie, the label, such as "work" or "home") next to any postal addrss in the Address Book application.  Choosing the "Print Snail Mail Envelope" command from the menu that appears will cause Snail Mail to be launched and to print an envelope addressed to the chosen Address Book record.
-
 <h4>System Services</h4>
-The following 3 Snail Mail services are available to other applications.  Please note that Snail Mail must be installed in a standard Applications location (eg, /Application) for these to work.  Additionally, these services will not be available until after the next login after installation.
+The following 3 Snail Mail services are available to other applications.  Please note that Snail Mail must be installed in a standard Applications location (eg, /Application) for these to work.  Additionally, these services will not be available until after the next login after installation. You may also need to enable them in the System Services->Keyboard->Services->Text.
 <br>
 <b>Selected Text to Snail Mail Envelope</b> - Places the selected text from the current application into the delivery address text area in the Snail Mail envelope window.
 <br>
 <b>Snail Mail Envelope Text to Current Document</b> - Places the text from the Snail Mail Envelope window's delivery address text area into the current application's frontmost window, at the insertion point (replacing any selected text).
 <br>
-<b>Selected Text to Snail Mail Print</b> - Places the selected text from the current application into the delivery address text area in the Snail Mail envelope window, and invoke's Snail Mail's print command.  Ie, address and print an envelope using any text from any Services Compliant application.
+<b>Selected Text to Snail Mail Print</b> - Places the selected text from the current application into the delivery address text area in the Snail Mail envelope window, and invoke's Snail Mail's print command.  Ie, address and print an envelope using any text from any Services Compliant applicatimy on.
 
 <h4>Other Inter-Application Features</h4>
 Many Mac OS X Applications are not services compliant (ie, all Carbon applications, as of OS X 10.2.x).  Therefore to supply similar functionality to these applications there is a "Copy Address" and "Paste Address" toolbar icon in Snail Mail's main window to copy/paste text quickly between the envelope window's delivery address text area and the system clipboard (where it can be copied/pasted into any other application).  This is a little faster than selecting the text in the envelope window and manually copying and pasting text using the Edit menu.
@@ -132,13 +120,13 @@ Enter text in the prefix or suffix field(s) to have that text printed before/aft
 Some countries can be referred to by several different names (eg, "United Kingdom", "UK", "U.K."), so in order fro Snail Mail to be able to tell that these different names all refer to the same country as the return address, enter the names in this field (each on a separate line).  Snail Mail will treat each of these as though it was the same as the return address country, for the purposes of country hiding and barcoding.
 
 <h4>Return Address Popup Includes:</h4>
-By default, the Return Address popup menu in the main Snail Mail window contains all addresses in the special "My Card" record in the Address Book (if it exists).  If you want to be able to choose return addresses from some other Address Book record, choose either "All Addresses", to have every address listed in the Return Address popup, or choose a group (as defined in the Address Book) to show every address from that group.
+By default, the Return Address popup menu in the main Snail Mail window contains all addresses in the special "My Card" record in Contacts (if it exists).  If you want to be able to choose return addresses from some other Contacts record, choose either "All Addresses", to have every address listed in the Return Address popup, or choose a group (as defined in Contacts) to show every address from that group.
 
 <h4>Use Barcodes:</h4>
 Choose a barcode scheme to have those type of barcodes displayed/printed on your envelopes, or choose "(None)" to stop using barcodes.  NB:  Barcodes will only be printed if Snail Mail thinks the return address and delivery address are for the same country.  You can add other countries for which barcodes should always be printed in the "Local Country Variants" (see above).
 
 <h4>Print Selected Envelopes</h4>
-By default, the "Print Selected Envelopes" command ("File" menu) prints one envelope for each selected address, however, if some persons records in the Address Book have several addresses (eg, one for work and one for home), you may want to automatically choose home addresses only, or work addresses only.
+By default, the "Print Selected Envelopes" command ("File" menu) prints one envelope for each selected address, however, if some persons records in Contacts have several addresses (eg, one for work and one for home), you may want to automatically choose home addresses only, or work addresses only.
 <p>
 To only print addresses that match a particular label (eg, "Home", "Work") enter the label into the "Only Print Label" field in the Preferences window.  Using this setting, one envelope is printed for each selected person who has a matching address (the address actually selected in the main window is ignored, only the selected person is used).
 <p>
@@ -146,9 +134,9 @@ If some records do not have an address that matches the label you've entered (eg
 
 <h3>Editting Delivery Addresses</h3>
 
-You can make one-off changes by editting delivery address text directly in the envelope window, but such changes will not be saved in the Address Book.
+You can make one-off changes by editting delivery address text directly in the envelope window, but such changes will not be saved in Contacts.
 <P>
-To make permanent changes to an address, double-click the address in the address list, and the Address Book will open that record in edit mode.  To add or remove addresses, click on Snail Mail's "Address Book" button to open the Address Book in browse mode. (see the Address Book documentation for more information on editting, adding and deleting addresses).
+To make permanent changes to an address, double-click the address in the address list, and Contacts will open that record in edit mode.  To add or remove addresses, click on Snail Mail's "Contacts" button to open Contacts in browse mode. (see Contacts documentation for more information on editting, adding and deleting addresses).
 
 <hr>
 
