Bug fix. Documentation updates.

--- a/Help/index.html
+++ b/Help/index.html
@@ -3,7 +3,7 @@
     <meta NAME="AppleTitle" CONTENT="Snail Mail"></meta>
     <title>Snail Mail - User Guide</title>
 </head>
-<body bgcolor="#ccccff">
+<body bgcolor="#ffffff">
 
 <center>
 <h1>
@@ -70,16 +70,16 @@ Graphics can also be added to this background area by copy/paste or drag/drop.
 <p>
 NB:  Because this background area overlaps with the return address and recipient address areas, be careful not to add text or graphics that will interfere with the text in these areas.  It may be necessary to press RETURN or TAB (or both) a few times to avoid typing visible text directly behind the return address, for example.
 <p>
-Tip:  Using images in the envelope background allows company logos to be placed behind the return address area and be used in conjuction with an automatically placed address from Contacts.  Because the left margin of the return address and the left margin of the background area are usually the same an extra step is necessary if you wish to have a graphic placed to the left of the return address (as is often the case for a company logo, for example).  To do this, open the "Text Attributes" window using the toolbar button, or the command in the "Format" menu, then select all the text in the Return Address Fields area, and choose "Show Ruler" from the "Format" menu.  Using this ruler, drag the left line starting markers to the right enough to make room for the desired graphic, then click "Okay".
+Tip:  Using images in the envelope background allows company logos to be placed behind the return address area and be used in conjuction with an automatically placed address from Contacts.  Because the left margin of the return address and the left margin of the background area are usually the same an extra step is necessary if you wish to have a graphic placed to the left of the return address (as is often the case for a company logo, for example).  To do this, open the "Text Attributes" window using the toolbar button, or the command in the "Format" menu, then select all the text in the Return Address Fields area, and choose "Show Ruler" from the "Format" menu.  Using this ruler, drag the left line starting markers to the right enough to make room for the desired graphic, then click "OK".
 
 <h3>Envelope Profiles and Page Setup</h3>
 An envelope profile is simply a set of standard "Page Setup" settings and Snail Mail "Margins" settings.  Snail Mail is initially configured with one default envelope profile (#10 envelope with appropriate margins) called "Default".
 
 <h4>Add, Delete or Rename Envelope Profile</h4>
-Choose "Edit Profiles..." from the "Envelope Setup" poup menu in the Snail Mail window.  This will display the "Envelope Profiles" window.  From here you can click "New" to add a profile, "Delete" to delete the selected profile or double click a profile name to change it's name.
-<p>Note:  You cannot delete the last profile left (there must always be at least 1 profile), and you cannot have 2 profiles with the same name.
+Choose "Edit Profiles..." from the "Envelope Setup" poup menu in the Snail Mail window.  This will display the "Envelope Profiles" window.  From here you can click "New" to add a profile, "Delete" to delete the selected profile or double-click a profile name to change its name.
+<p>Note:  You cannot delete the last remaining profile (there must always be at least 1 profile), and you cannot have 2 profiles with the same name.
 
-<h4>Edit an Envelope Profiles Envelope Setup (Page Setup and Margins)</h4>
+<h4>Edit an Envelope Profile's Envelope Setup (Page Setup and Margins)</h4>
 To change the settings for an Envelope Profile, choose the profile from the "Envelope Setup" popup menu, then use the "Page Setup..." command in the "File" menu to change paper size, orientation, etc, and use the "Margins..." command in the "Format" menu to change margins settings (see "Margins" below).
 
 <h3>Margins</h3>
@@ -96,16 +96,16 @@ To set the default text attributes, click the "Text Attributes" button in the to
 <h3>Inter-Application Features</h3>
 
 <h4>System Services</h4>
-The following 3 Snail Mail services are available to other applications.  Please note that Snail Mail must be installed in a standard Applications location (eg, /Application) for these to work.  Additionally, these services will not be available until after the next login after installation. You may also need to enable them in the System Services->Keyboard->Services->Text.
-<br>
+The following 3 Snail Mail services are available to other applications.  Please note that Snail Mail must be installed in a standard Applications location (eg /Applications) for these to work.  Additionally, these services will not be available until after the next login after installation. You may also need to enable them in System Services->Keyboard->Services->Text.
+<br><br>
 <b>Selected Text to Snail Mail Envelope</b> - Places the selected text from the current application into the delivery address text area in the Snail Mail envelope window.
 <br>
-<b>Snail Mail Envelope Text to Current Document</b> - Places the text from the Snail Mail Envelope window's delivery address text area into the current application's frontmost window, at the insertion point (replacing any selected text).
+<b>Snail Mail Envelope Text to Current Document</b> - Places the text from the Snail Mail Envelope window's delivery address text area into the current application's front-most window, at the insertion point (replacing any selected text).
 <br>
-<b>Selected Text to Snail Mail Print</b> - Places the selected text from the current application into the delivery address text area in the Snail Mail envelope window, and invoke's Snail Mail's print command.  Ie, address and print an envelope using any text from any Services Compliant applicatimy on.
+<b>Selected Text to Snail Mail Print</b> - Places the selected text from the current application into the delivery address text area in the Snail Mail envelope window, and invokes Snail Mail's print command.  ie, address and print an envelope using any text from any Services-Compliant application.
 
 <h4>Other Inter-Application Features</h4>
-Many Mac OS X Applications are not services compliant (ie, all Carbon applications, as of OS X 10.2.x).  Therefore to supply similar functionality to these applications there is a "Copy Address" and "Paste Address" toolbar icon in Snail Mail's main window to copy/paste text quickly between the envelope window's delivery address text area and the system clipboard (where it can be copied/pasted into any other application).  This is a little faster than selecting the text in the envelope window and manually copying and pasting text using the Edit menu.
+Many Mac OS X Applications were not services-compliant (ie, all Carbon applications, as of OS X 10.2.x).  Therefore to supply similar functionality to these applications there are "Copy Address" and "Paste Address" toolbar buttons in Snail Mail's main window to copy/paste text quickly between the envelope window's delivery address text area and the system clipboard (where it can be copied/pasted into any other application).  This is a little faster than selecting the text in the envelope window and manually copying and pasting text using the Edit menu.
 
 <h3>Preferences</h3>
 
@@ -117,7 +117,7 @@ Select the checkbox(es) for any "Hide..." field(s) to avoid having those fields 
 Enter text in the prefix or suffix field(s) to have that text printed before/after the address(es) on the envelope.  For example, a useful return address prefix might be, "If undeliverable, return to:"; or a useful addresse prefix might be, "Attn: Accounting Dept".
 
 <h4>Local Country Variants:</h4>
-Some countries can be referred to by several different names (eg, "United Kingdom", "UK", "U.K."), so in order fro Snail Mail to be able to tell that these different names all refer to the same country as the return address, enter the names in this field (each on a separate line).  Snail Mail will treat each of these as though it was the same as the return address country, for the purposes of country hiding and barcoding.
+Some countries can be referred to by several different names (eg, "United Kingdom", "UK", "U.K."), so in order for Snail Mail to be able to tell that these different names all refer to the same country as the return address, enter the names in this field (each on a separate line).  Snail Mail will treat each of these as though it was the same as the return address country, for the purposes of country hiding and barcoding.
 
 <h4>Return Address Popup Includes:</h4>
 By default, the Return Address popup menu in the main Snail Mail window contains all addresses in the special "My Card" record in Contacts (if it exists).  If you want to be able to choose return addresses from some other Contacts record, choose either "All Addresses", to have every address listed in the Return Address popup, or choose a group (as defined in Contacts) to show every address from that group.
@@ -132,11 +132,11 @@ To only print addresses that match a particular label (eg, "Home", "Work") enter
 <p>
 If some records do not have an address that matches the label you've entered (eg, "Home", "Work"), you can select the "Print Other Address if No Matching Label" checkbox to print an envelope for another address (if the record has another address).  This way, you can be certain to print an envelope for every person with an address, even if some of the person records do not have an address that matches the label you've entered.
 
-<h3>Editting Delivery Addresses</h3>
+<h3>Editing Delivery Addresses</h3>
 
-You can make one-off changes by editting delivery address text directly in the envelope window, but such changes will not be saved in Contacts.
+You can make one-off changes by editing the delivery address text directly in the envelope window, but such changes will not be saved in Contacts.
 <P>
-To make permanent changes to an address, double-click the address in the address list, and Contacts will open that record in edit mode.  To add or remove addresses, click on Snail Mail's "Contacts" button to open Contacts in browse mode. (see Contacts documentation for more information on editting, adding and deleting addresses).
+To make permanent changes to an address, double-click the address in the address list, and Contacts will open that record in edit mode.  To add or remove addresses, click on Snail Mail's "Contacts" button to open Contacts in browse mode. (see Contacts documentation for more information on editing, adding and deleting addresses).
 
 <hr>
 
