--- a/documentation/Change Log.html
+++ b/documentation/Change Log.html
@@ -2,7 +2,7 @@
 <head>
    <title>Snail Mail - Change Log</title>
 </head>
-<body bgcolor="#ccccff">
+<body bgcolor="#ffffff">
 
 <center>
 <h1>
@@ -10,6 +10,29 @@
 <h2>
 Change Log</h2>
 <hr>
+<h3>1.94</h3>
+<ul>
+    <li>Bug fix when using Return Address drop-down.
+    <li>Documentation updates. <br>June, 2020
+</ul>
+<h3>1.93</h3>
+<ul>
+<li>Removed plugin - Contacts does not seem to support plugins. <br>June, 2020
+</ul>
+<h3>1.92</h3>
+<ul>
+<li>Removed use of private methods and associated functionality since the private methods are non-functional in MacOSX 10.10. <br>May, 2020
+</ul>
+<h3>1.91</h3>
+<ul>
+<li>Updated to use ARC
+<li>Removed data-size warnings (replaced int with NSInteger)
+<li>Replaced deprecated objects and methods. <br>May, 2020
+</ul>
+<h3>1.9</h3>
+<ul>
+<li>Compiles for 64-bit only (Issue #8). Compiles on Mojave (10.14) and Yosemite (10.10) and maybe others in-between. <br>May, 2020
+</ul>
 <h3>1.8</h3>
 <ul>
 <li>Records for companies will now match person name as well as company name when searching (as for records for people).
